--- a/myfirstplaybook.yml
+++ b/myfirstplaybook.yml
@@ -1,6 +1,7 @@
 ---
--hosts: all
- tasks:
+- hosts: all
+  become: yes
+  tasks:
   - name: i want to install apache2 webserver on ubuntu16 ansible nodes
     apt:
       name: apache2
