--- a/myfirstplaybook.yml
+++ b/myfirstplaybook.yml
@@ -1,8 +1,12 @@
 ---
 - hosts: all
-  become: yes
   tasks:
   - name: i want to install apache2 webserver on ubuntu16 ansible nodes
     apt:
       name: apache2
       state: present
+
+    when: ansible_OS_family == "Debain"
+
+    
+ 
