--- a/mysample2.yml
+++ b/mysample2.yml
@@ -3,30 +3,23 @@
 ---
   - hosts: all
     become: yes
-    vars:
-    - var1:wget
-    - var2:tree
     tasks:
      - name: i want to install weget on ubuntu nodes
        apt:
-        name: "{{item}}" 
+        name: wget 
         state: present
 
        when: ansible_OS_family == "Debain"
      - name: i want start wget on RedHat nodes
-       service: "{{item}}" 
+       service: wget 
        state: started
        when: ansible_OS_family == "RedHat"
      - name: i want to install tree on ubuntu nodes
        apt:
-        name:  "{{item}}"
+        name: tree
         state: present
        when: ansible_OS_family == "Debain" 
      - name: i want start tree on RedHat nodes
-       service: "{{item}}" 
+       service: tree 
        state: started
        when: ansible_OS_family == "RedHat"  
-
-       loop:
-        - "{{var1}}"
-        - "{{var2}}"
