--- a/mysample2.yml
+++ b/mysample2.yml
@@ -4,24 +4,20 @@
   - hosts: all
     become: yes
     tasks:
-     - name: i want to install wget on ubuntu nodes
+     - name: i want to install wget 
        apt:
         name: wget 
         state: present
-
-       when: ansible_OS_family == "Debain"
-     - name: i want start wget on RedHat nodes
-       service: 
+     - name: i want to start wget 
+       service:
          name: wget 
          state: started
-       when: ansible_os_family == "RedHat"
-     - name: i want to install tree on ubuntu nodes
+     - name: i want to install tree 
        apt:
         name: tree
-        state: present
-       when: ansible_os_family == "Debain" 
-     - name: i want start tree on RedHat nodes
+        state: present 
+     - name: i want start tree 
        service: 
          name: tree
          state: started
-       when: ansible_os_family == "RedHat"  
+       
