--- a/mysample2.yml
+++ b/mysample2.yml
@@ -14,5 +14,8 @@
         name: tree
         state: present
  
-     
+     - name: i want to install git 
+       apt:
+        name: git
+        state: present
        
