--- a/myplaybookvars.yml
+++ b/myplaybookvars.yml
@@ -4,7 +4,7 @@
    vars:
      myvar1: git
      myvar2: tree
-    
+     myvar3: wget
    tasks:
      - name:  i want to display myvar1
        debug: 
@@ -12,9 +12,9 @@
 
      - name: i want to install git
        apt:
-        name: "{{ myvar1 }}"
+        name: "{{ item }}"
         state: present
         loop:
           - "{{myvar1}}"
           - "{{myvar2}}"
-         
+          - "{{myvar2}}"
