--- a/myplaybookvars.yml
+++ b/myplaybookvars.yml
@@ -12,9 +12,6 @@
 
      - name: i want to install git
        apt:
-        name: "{{ item }}"
+        name: "{{ myvar1 }}"
         state: present
-        loop:
-          - "{{myvar1}}"
-          - "{{myvar2}}"
-          - "{{myvar2}}"
+        
